===================
Django Yarr Changes
===================

Changelog
=========

            Feature:    Tox test support (#9, #39)
            Bugfix:     Fix reST syntax in upgrade notes (#38)
            Bugfix:     Fixed race condition when changing feeds while scrolled
            Thanks to:  Spencer Herzberg (sherzberg) for #9
                        Tom Most (twm) for #38 and #39

0.4.2       2014-02-13  See UPGRADE
            Bugfix:     Improved compatibility of raw SQL to update count cache
            Internal:   Changed count_unread and count_total to not null in db

0.4.1       2014-02-13  See UPGRADE
            Feature:    Added OPML export (#33)
            Feature:    Can now mark all read without reloading page
            Feature:    Added yarr_clean management command for help upgrading
            Bugfix:     Static read all button only changes state of unread
            Bugfix:     Fixed load status appearing at wrong time
            Bugfix:     Fixed list mode click having incorrect effect
            Bugfix:     Fixed scrollTo error
            Bugfix:     Expiry dates are reset when item state changes
            Bugfix:     Mark all read updates unread count correctly (#35)
            Bugfix:     Expiring entries updates total count correctly
            Bugfix:     Fixed dropdown bugs
            Internal:   Optimised unread and total count updates
            Internal:   All templates have div wrappers (#37)
            Thanks to:  Tom Most (twm) for #33 and #37

0.4.0       2014-02-06  See UPGRADE
            Feature:    Simplified control bar
            Feature:    Can now change feeds without reloading page (fixes #27)
            Feature:    Can now change filter and order without reloading page
            Feature:    Simplified save/read state, save indicated in list mode
            Bugfix:     Changed Entry .save and .read to .state (fixes #35)
            Bugfix:     Added Feed.text for user-customisable title (fixes #34)